--- a/src/Tesla.css
+++ b/src/Tesla.css
@@ -5,6 +5,9 @@
     font-family:"roboto",sans-serif;
     font-weight:600;
 }
+html{
+    scroll-snap-type:y mandatory;
+}
 h1,h2,h3,h4,h5,h6{
     font-family:"roboto",sans-serif;
     font-weight:700;
@@ -35,6 +38,7 @@ section{
     background-position: center !important;
     background-size: cover !important;
     background-repeat: no-repeat !important;
+    scroll-snap-align:start;
 }
  section #arrow{
     width: 50px;
